input button on small screen fix

--- a/library-metasearch/src/form/SearchForm.css
+++ b/library-metasearch/src/form/SearchForm.css
@@ -25,8 +25,7 @@
 
 @media all and (max-width: 900px) {
   .input-container input {
-    display: block;
-    margin: 0;
+    flex-direction: column;
   }
 
   .input-container input[type=text] {
